[gd_scene load_steps=22 format=3 uid="uid://cyymvk7nsgj5t"]

[ext_resource type="Texture2D" uid="uid://5pk2obyo53cr" path="res://icon.svg" id="1_qrbhw"]
[ext_resource type="Script" uid="uid://h0rs84h2em76" path="res://assets/scenes/character_select.gd" id="1_wsrkv"]
[ext_resource type="Shader" uid="uid://ctain7f44qshm" path="res://assets/scenes/gradient.gdshader" id="2_70d5h"]
[ext_resource type="Texture2D" uid="uid://b1gapn3efv4e0" path="res://assets/sprites/rhay.png" id="2_ctrvq"]
[ext_resource type="Shader" uid="uid://b3pome8s7hhf6" path="res://assets/scripts/shaders/UI_outline.gdshader" id="2_hp1km"]
[ext_resource type="Shader" uid="uid://d1qawo6wk7hfb" path="res://assets/scripts/shaders/scroll_faces_shader.gdshader" id="2_tnaqc"]
[ext_resource type="Texture2D" uid="uid://brdci3je8xyyy" path="res://assets/textures/gameMap_TCom_Wall_Stone3_2x2_512_albedo.png" id="3_3vvea"]
[ext_resource type="Texture2D" uid="uid://cd2dq1xkgmvd2" path="res://assets/sprites/ramon.png" id="3_r2fdo"]
[ext_resource type="Texture2D" uid="uid://cnr42q30is1ll" path="res://assets/sprites/clean.png" id="4_lp8jo"]
[ext_resource type="Texture2D" uid="uid://he46kwaimprs" path="res://assets/sprites/shugo.png" id="5_ux7vi"]
[ext_resource type="Texture2D" uid="uid://ce1p48mexskks" path="res://assets/sprites/nephi.png" id="6_1lgrt"]
[ext_resource type="Shader" uid="uid://c7crpvx38smj" path="res://assets/scenes/UI_outline_solid.gdshader" id="10_0h5le"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3vvea"]
shader = ExtResource("2_70d5h")
shader_parameter/initial_color = Color(0.194125, 0.277553, 0.343456, 1)
shader_parameter/final_color = Color(0.129935, 0.0992781, 0.137967, 0.913725)
shader_parameter/vertical = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x2it3"]
shader = ExtResource("2_tnaqc")
shader_parameter/MOVE_SPEED = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ro2wk"]
shader = ExtResource("2_70d5h")
shader_parameter/initial_color = Color(0.141519, 0.22597, 0.320184, 1)
shader_parameter/final_color = Color(0.161417, 0.145697, 0.193517, 1)
shader_parameter/vertical = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_70d5h"]
shader = ExtResource("2_hp1km")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/direction = -1.0
shader_parameter/frequency = 2.0
shader_parameter/speed = 3.0
shader_parameter/radius = 1.0
shader_parameter/line_thickness = 0.5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wsrkv"]

[sub_resource type="ImageTexture" id="ImageTexture_wsrkv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ctrvq"]
texture = SubResource("ImageTexture_wsrkv")
modulate_color = Color(0, 0.592157, 0.592157, 0.470588)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wsrkv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tnaqc"]
shader = ExtResource("10_0h5le")
shader_parameter/allow_out_of_bounds = true
shader_parameter/outline_thickness = 1.0
shader_parameter/outline_color = Color(0.515867, 0.515867, 0.515867, 0.537255)

[node name="CharSelect" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.5
offset_top = -150.0
offset_right = 235.5
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wsrkv")

[node name="actualBg" type="ColorRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_3vvea")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -32.0
offset_right = 100.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.192256, 0.241947, 0.305851, 1)

[node name="loopingBG" type="TextureRect" parent="."]
modulate = Color(0.470733, 0.478353, 0.634066, 0.156863)
light_mask = 0
y_sort_enabled = true
material = SubResource("ShaderMaterial_x2it3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -89.0
offset_top = -35.0
offset_right = 740.0
offset_bottom = 397.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("3_3vvea")
stretch_mode = 1

[node name="bg" type="Panel" parent="."]
material = SubResource("ShaderMaterial_ro2wk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="line" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_top = 6.0
offset_right = 474.0
offset_bottom = 10.0
color = Color(0, 0, 0, 1)

[node name="outline" type="Panel" parent="."]
material = SubResource("ShaderMaterial_70d5h")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 5.0
offset_right = 7.0
offset_bottom = -289.0
grow_horizontal = 2
grow_vertical = 2

[node name="lottaLines" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="leftLine" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -93.0
offset_right = 3.0
offset_bottom = 128.0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="rightLine" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 469.0
offset_top = -93.0
offset_right = 472.0
offset_bottom = 125.0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="upLine" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 458.0
offset_top = -118.0
offset_right = 461.0
offset_bottom = 324.0
grow_vertical = 2
rotation = 1.5708
color = Color(0, 0, 0, 1)

[node name="upLine2" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 457.0
offset_top = 148.0
offset_right = 460.0
offset_bottom = 590.0
grow_vertical = 2
rotation = 1.5708
color = Color(0, 0, 0, 1)

[node name="diagonalUpLeft" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -118.0
offset_right = 18.0
offset_bottom = -88.0
grow_vertical = 2
rotation = 0.523599
color = Color(0, 0, 0, 1)

[node name="spikeLeftUp" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.9999
offset_right = 3.0
offset_bottom = 15.0001
grow_vertical = 2
rotation = -0.523599
color = Color(0, 0, 0, 1)

[node name="spikeLeftDown" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 14.0
offset_top = 9.00005
offset_right = 17.0
offset_bottom = 37.0
grow_vertical = 2
rotation = 0.523599
color = Color(0, 0, 0, 1)

[node name="spikeRightUp" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 469.0
offset_top = -13.0
offset_right = 472.0
offset_bottom = 15.0
grow_vertical = 2
rotation = 0.523599
color = Color(0, 0, 0, 1)

[node name="spikeRightDown" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 455.0
offset_top = 10.0
offset_right = 458.0
offset_bottom = 38.0
grow_vertical = 2
rotation = -0.523599
color = Color(0, 0, 0, 1)

[node name="diagonalUpRight" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 455.0
offset_top = -116.0
offset_right = 458.0
offset_bottom = -88.0
grow_vertical = 2
rotation = -0.523599
color = Color(0, 0, 0, 1)

[node name="diagonalDownLeft" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 127.0
offset_right = 3.0
offset_bottom = 155.0
grow_vertical = 2
rotation = -0.523599
color = Color(0, 0, 0, 1)

[node name="diagonalDownRight" type="ColorRect" parent="lottaLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 469.0
offset_top = 123.0
offset_right = 472.0
offset_bottom = 153.0
grow_vertical = 2
rotation = 0.523599
color = Color(0, 0, 0, 1)

[node name="Characters" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -16.0
offset_right = 216.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="rhay" type="Control" parent="Characters"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CharacterSplash" type="TextureRect" parent="Characters/rhay"]
texture_filter = 6
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -32.5
offset_right = 34.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ctrvq")
expand_mode = 1
stretch_mode = 6

[node name="CharacterName" type="RichTextLabel" parent="Characters/rhay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -49.5
offset_right = 37.0
offset_bottom = -18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Rhay
"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Characters/rhay"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -35.0
offset_right = 35.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wsrkv")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ctrvq")
theme_override_styles/normal = SubResource("StyleBoxTexture_wsrkv")

[node name="ramon" type="Control" parent="Characters"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CharacterSplash" type="TextureRect" parent="Characters/ramon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -30.0
offset_right = 31.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_r2fdo")
expand_mode = 1

[node name="CharacterName" type="RichTextLabel" parent="Characters/ramon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -49.5
offset_right = 37.0
offset_bottom = -18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Ramón"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Characters/ramon"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -35.0
offset_right = 35.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wsrkv")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ctrvq")
theme_override_styles/normal = SubResource("StyleBoxTexture_wsrkv")

[node name="clean" type="Control" parent="Characters"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CharacterSplash" type="TextureRect" parent="Characters/clean"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -31.0
offset_right = 35.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_lp8jo")
expand_mode = 1
stretch_mode = 6

[node name="CharacterName" type="RichTextLabel" parent="Characters/clean"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -49.5
offset_right = 37.0
offset_bottom = -18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Clean"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Characters/clean"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -35.0
offset_right = 35.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wsrkv")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ctrvq")
theme_override_styles/normal = SubResource("StyleBoxTexture_wsrkv")

[node name="shugo" type="Control" parent="Characters"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CharacterSplash" type="TextureRect" parent="Characters/shugo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -31.0
offset_right = 35.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ux7vi")
expand_mode = 1
stretch_mode = 6

[node name="CharacterName" type="RichTextLabel" parent="Characters/shugo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -49.5
offset_right = 37.0
offset_bottom = -18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Shugo"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Characters/shugo"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -35.0
offset_right = 35.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wsrkv")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ctrvq")
theme_override_styles/normal = SubResource("StyleBoxTexture_wsrkv")

[node name="nephi" type="Control" parent="Characters"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CharacterSplash" type="TextureRect" parent="Characters/nephi"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -31.0
offset_right = 35.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_1lgrt")
expand_mode = 1
stretch_mode = 6

[node name="CharacterName" type="RichTextLabel" parent="Characters/nephi"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -49.5
offset_right = 37.0
offset_bottom = -18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Nephi"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Characters/nephi"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -35.0
offset_right = 35.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wsrkv")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ctrvq")
theme_override_styles/normal = SubResource("StyleBoxTexture_wsrkv")

[node name="BlackTeamText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -77.0
offset_top = -13.0
offset_right = -3.0
offset_bottom = 8.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Black Team"
scroll_active = false

[node name="BlackTeamContainer" type="VBoxContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -130.0
offset_right = -5.0
offset_bottom = 130.0
grow_vertical = 2

[node name="WhiteTeamText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 479.0
offset_top = -14.0
offset_right = 557.0
offset_bottom = 7.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "White Team"
scroll_active = false

[node name="WhiteTeamContainer" type="VBoxContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 476.0
offset_top = -130.0
offset_right = 551.0
offset_bottom = 130.0
grow_vertical = 2

[node name="PlayerTemplate" type="Button" parent="."]
visible = false
self_modulate = Color(0.396889, 0.396889, 0.396889, 1)
clip_contents = true
layout_mode = 2
offset_left = -80.0
offset_top = 20.0
offset_right = -5.0
offset_bottom = 74.0
action_mode = 0
text = "

"

[node name="CharacterSplash" type="TextureRect" parent="PlayerTemplate"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_qrbhw")
expand_mode = 1

[node name="PlayerUsername" type="RichTextLabel" parent="PlayerTemplate"]
layout_mode = 0
offset_right = 75.0
offset_bottom = 20.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 11
text = "nadie xdxd"
fit_content = true
horizontal_alignment = 1

[node name="BgColor" type="ColorRect" parent="PlayerTemplate"]
z_index = -1
material = SubResource("ShaderMaterial_tnaqc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.5
offset_top = -33.0
offset_right = 179.5
offset_bottom = 9.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 30
text = "Select Your Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="secondsRemaining" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.5
offset_top = 4.0
offset_right = 87.5
offset_bottom = 57.0
grow_horizontal = 2
theme_override_constants/outline_size = 6
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/normal_font_size = 38
text = "60"
horizontal_alignment = 1
